<resources>
    <string name="app_name">Animals Data</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_random_dog_image">Get Random Dog Image</string>
    <string name="image_dog">image dog</string>
    <string name="generate_new_image">Generate New Image</string>
    <string name="animal_data">Animal Data</string>
    <string name="cat_image">Cat Image</string>
    <string name="dog_image">Dog Image</string>
    <string name="image_cat">Image Cat</string>
    <string name="get_random_cat_image">Get Random Cat Image</string>
    <string name="icon_back">Icon Back</string>
</resources>